--- a/client/web/service-invocation.html
+++ b/client/web/service-invocation.html
@@ -5,6 +5,24 @@
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Service Invocation</title>
   <link rel="stylesheet" href="./assets/app.css"/>
+  <style>
+    /* Network Log（由 ./assets/ui.js 统一 patch fetch 写入） */
+    #networkLog{
+      margin-top: 14px;
+      padding: 10px;
+      border: 1px solid rgba(0,0,0,.12);
+      border-radius: 8px;
+      background: rgba(0,0,0,.03);
+      height: 220px;
+      overflow: auto;
+      white-space: pre-wrap;
+      word-break: break-word;
+      font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+      font-size: 12px;
+      line-height: 1.35;
+    }
+    .netlog-title{ margin-top: 16px; font-weight: 700; }
+  </style>
 </head>
 <body>
   <div class="wrap">
@@ -38,6 +56,9 @@
       </div>
 
       <div id="err" class="err"></div>
+
+      <div class="netlog-title">Network Log</div>
+      <div id="networkLog"></div>
     </div>
   </div>
 
