--- a/platform/web/service-register.html
+++ b/platform/web/service-register.html
@@ -5,6 +5,24 @@
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Service Register</title>
   <link rel="stylesheet" href="./assets/app.css"/>
+  <style>
+    /* Network Log：底部滚动区（fetch 日志由 ./assets/ui.js 统一注入） */
+    #networkLog{
+      margin-top: 14px;
+      padding: 10px;
+      border: 1px solid rgba(0,0,0,.12);
+      border-radius: 8px;
+      background: rgba(0,0,0,.03);
+      height: 200px;
+      overflow: auto;
+      white-space: pre-wrap;
+      word-break: break-word;
+      font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+      font-size: 12px;
+      line-height: 1.35;
+    }
+    .netlog-title{ margin-top: 18px; font-weight: 700; }
+  </style>
 </head>
 <body>
   <div class="wrap">
@@ -59,16 +77,6 @@
           <input id="SoftwareDependency" />
         </div>
         <div></div>
-
-        <div style="grid-column:1 / -1">
-          <label>Data Sample</label>
-          <textarea id="DataSample"></textarea>
-        </div>
-
-        <div style="grid-column:1 / -1">
-          <label>Result</label>
-          <textarea id="Result"></textarea>
-        </div>
       </div>
 
       <div class="row" style="margin-top:12px;">
@@ -77,6 +85,9 @@
       </div>
 
       <div id="err" class="err"></div>
+
+      <div class="netlog-title">Network Log</div>
+      <div id="networkLog"></div>
     </div>
   </div>
 
